--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <meta property="og:title" content="Alan Martín López Chávez — ML Engineer / MLOps" />
   <meta property="og:description" content="Scalable ML systems: Vertex AI, Airflow, Kubeflow, PyTorch. Portfolio & projects." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://avatars.githubusercontent.com/u/000000?v=4" />
+  <meta property="og:image" content="https://avatars.githubusercontent.com/u/108258580?s=400&u=08a14c7fab7bf5818c8256cd008f9dfab9f3818c&v=4" />
   <meta name="twitter:card" content="summary_large_image" />
   <script type="application/ld+json">
   {
@@ -105,7 +105,6 @@
           <p>End‑to‑end ML End-to-end pipeline for predictive maintenance. Champion/Challenger and API with FastAPI.</p>
           <footer>
             <a href="https://github.com/AlanMLCH/azure_pdm_ml">Repo</a>
-            <a href="#" class="secondary">Diagram</a>
           </footer>
         </article>
         <article>
@@ -113,7 +112,6 @@
           <p>Two‑tower retrieval + FAISS ANN index; nightly rebuild, TorchServe + FastAPI behind Traefik; PSI drift monitoring.</p>
           <footer>
             <a href="https://github.com/AlanMLCH/steam-recommender">Repo</a>
-            <a href="#" class="secondary">Demo</a>
           </footer>
         </article>
         <article>
@@ -121,7 +119,6 @@
           <p>Transformer for MIDI generation by instrument; CUDA training, FastAPI endpoint, simple web UI for prompts.</p>
           <footer>
             <a href="https://github.com/AlanMLCH/sound_generator">Repo</a>
-            <a href="#" class="secondary">Samples</a>
           </footer>
         </article>
         <article>
@@ -129,7 +126,6 @@
           <p>Production‑ready repo skeleton: <span class="mono">src/</span>, <span class="mono">configs/</span>, Simple python, CLI, tests, docs.</p>
           <footer>
             <a href="https://github.com/AlanMLCH/binary_classification">Repo</a>
-            <a href="#" class="secondary">Docs</a>
           </footer>
         </article>
       </div>
@@ -166,6 +162,29 @@
       </ul>
     </section>
   </main>
+
+    <section id="cv">
+        <h2>📄 Curriculum Vitae</h2>
+        <p class="muted">Inline preview below. If your browser doesn't support embedded PDFs, use the download link.</p>
+        <div style="border:1px solid var(--pico-muted-border-color); border-radius:8px; overflow:hidden;">
+        <iframe
+        src="assets/AlanLopez_CV.pdf#view=FitH&toolbar=1&navpanes=0"
+        title="Alan López — CV PDF"
+        style="width:100%; height: 900px;"
+        ></iframe>
+        </div>
+        <p style="margin-top:.75rem">
+        <a href="assets/AlanLopez_CV.pdf" download class="contrast">⬇️ Download CV (PDF)</a>
+        <span class="muted"> · Last updated <span class="mono" id="cv-updated">2025-10-27</span></span>
+        </p>
+
+        <details>
+        <summary>Troubleshooting & alternatives</summary>
+        <ul>
+        <li>On iOS Safari, inline PDF preview may not render. Use the download link above.</li>
+        </ul>
+        </details>
+    </section>
 
   <footer class="footer container">
     <small class="muted">© <span id="y"></span> Alan López · Built with <span class="emoji">⚙️</span> Pico.css · No JS build, fully static.</small>
