--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div>
-        <img class="avatar" src="https://avatars.githubusercontent.com/u/000000?v=4" alt="Alan López avatar (GitHub)" />
+        <img class="avatar" src="https://avatars.githubusercontent.com/u/108258580?s=400&u=08a14c7fab7bf5818c8256cd008f9dfab9f3818c&v=4" alt="Alan López avatar (GitHub)" />
         <p class="muted" style="margin-top:.5rem">Based in Mexico · Open to collabs</p>
         <details>
           <summary>Quick links</summary>
@@ -161,7 +161,6 @@
         <li>GitHub: <a href="https://github.com/AlanMLCH">@AlanMLCH</a></li>
       </ul>
     </section>
-  </main>
 
     <section id="cv">
         <h2>📄 Curriculum Vitae</h2>
@@ -186,13 +185,15 @@
         </details>
     </section>
 
+  </main>
+
+
   <footer class="footer container">
     <small class="muted">© <span id="y"></span> Alan López · Built with <span class="emoji">⚙️</span> Pico.css · No JS build, fully static.</small>
   </footer>
 
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
-    // Optional: replace avatar src automatically from GitHub API if desired (no API call here to keep it static).
   </script>
 </body>
 </html>
